--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
 # Environment
 python-dotenv==1.2.1
 
+
 # GCP
 google-cloud-bigquery==3.39.0
 
 
 # Python src
+## reader
 PyYAML==6.0.3
+
+## api
+gspread==6.2.1
+
+## general
+pandas==2.3.3
